chore: misstype with .gams instead of .gms

--- a/sensitivity.ipynb
+++ b/sensitivity.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "### Solución\n",
     "\n",
-    "La solución con gamspy no la supe hacer, por lo que, recurrí a GAMS puro (ver [inclass.gms](./gams/sensivity/inclass/inclass.gams) para el código), y generó como salida el archivo [inclass.lst](./gams/sensivity/inclass/inclass.lst), del cual se puede rescatar lo siguiente:\n",
+    "La solución con gamspy no la supe hacer, por lo que, recurrí a GAMS puro (ver [inclass.gms](./gams/sensivity/inclass/inclass.gms) para el código), y generó como salida el archivo [inclass.lst](./gams/sensivity/inclass/inclass.lst), del cual se puede rescatar lo siguiente:\n",
     "\n",
     "```text\n",
     "--- Start ranging / sensitivity analysis...\n",
