refactor: update sensitivity analysis exercise and provide its solution

--- a/sensitivity.ipynb
+++ b/sensitivity.ipynb
@@ -96,43 +96,49 @@
    "source": [
     "## Problema 2\n",
     "\n",
-    "$Max\\, Z = 20000C + 14000D + 8000L + 4000M$\n",
+    "Enunciado:  \n",
+    "An insurance company is introducing three products: special risk insurance, mortgage \n",
+    "insurance, and long-term care insurance. The expected profit is $500 per unit on special \n",
+    "risk insurance, $250 per unit on mortgage insurance and $600 per unit on long term care \n",
+    "insurance. The work requirements are as follows: The management team wants to \n",
+    "establish sales quotas for each product to maximize the total expected profit. \n",
+    "\n",
+    "Modelo:  \n",
+    "$Max\\, Z = 500x_1 + 250x_2 + 600x_3$\n",
     "\n",
     "Restricciones:\n",
-    "\n",
-    "* $8C + 6D + 4L + 2M \\leq 200$\n",
-    "* $6C + 3D + 2L + 1M \\leq 144$\n",
-    "* $4C + 2D + 2L + 2M \\leq 80$\n",
-    "* $C \\geq 0; D \\geq 0; L \\geq 0; M \\geq 0$\n",
+    "* $2x_1 + x_2 + x_3 \\leq 240$\n",
+    "* $3x_1 + x_2 + 2x_3 \\leq 150$\n",
+    "* $x_1 + 2x_2 + 4x_3 \\leq 180$\n",
+    "* $x_1 \\geq 0; x_2 \\geq 0; x_3 \\geq 0$\n",
     "\n",
     "Tabla simplex final:\n",
     "\n",
-    "|       |      $C$      |      $D$      |      $L$      |      $M$      |     $s_1$      |     $s_2$     |     $s_3$      |       |\n",
-    "| ----- | ------------- | ------------- | ------------- | ------------- | -------------- | ------------- | -------------- | ----- |\n",
-    "|  $D$  |       0       |       1       |       0       |      -1       | $\\frac{1}{2}$  |       0       |       -1       |   20  |\n",
-    "| $s_2$ |       0       |       0       |      -1       |      -2       |       0        |       1       | -$\\frac{3}{2}$ |   24  |\n",
-    "|  $C$  |       1       |       0       | $\\frac{1}{2}$ |       1       | -$\\frac{1}{4}$ |       0       | $\\frac{3}{2}$  |   10  |\n",
-    "|  $z$  |       0       |       0       |     -2000     |     -2000     |     -2000      |       0       |     -1000      | 48000 |\n",
+    "|       | $x_1$ | $x_2$ | $x_3$ | $s_1$ | $s_2$ | $s_3$ |       |\n",
+    "| ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
+    "|  $z$  |   0   |  50   |   0   |   0   |  140  |  80   | 35400 |\n",
+    "| $s_1$ |   0   |  0.5  |   0   |   1   | -0.7  |  0.1  |  153  |\n",
+    "| $x_1$ |   1   |   0   |   0   |   0   |  0.4  | -0.2  |   24  |\n",
+    "| $x_3$ |   0   |  0.5  |   1   |   0   | -0.1  |  0.3  |   39  |\n",
     "\n",
     "Solución:  \n",
-    "$Max\\, Z = 48000$  \n",
-    "$D = 20$  \n",
-    "$C = 10$  \n",
+    "$Max\\, Z = 35400$  \n",
+    "$x_1 = 24$  \n",
+    "$x_3 = 39$  \n",
     "\n",
     "Analisis de sensibilidad:\n",
     "\n",
     "* Para $b$\n",
-    "    * $160 \\leq b_1 = 200 \\leq 240$\n",
-    "    * $120 \\leq b_2 = 144 \\leq \\infty$\n",
-    "    * $66.67 \\leq b_3 = 80 \\leq 96$\n",
+    "    * $87 \\leq b_1 = 240 \\leq \\infty$\n",
+    "    * $90 \\leq b_2 = 150 \\leq \\frac{2580}{7}$\n",
+    "    * $50 \\leq b_3 = 180 \\leq 300$\n",
     "\n",
     "* Para $C_j$\n",
-    "    * $18670 \\leq C_1 = 20000 \\leq 28000$\n",
-    "    * $10000 \\leq C_2 = 14000 \\leq 15000$\n",
-    "    * $-\\infty \\leq C_3 = 8000 \\leq 10000$\n",
-    "    * $-\\infty \\leq C_4 = 4000 \\leq 6000$\n",
+    "    * $150 \\leq C_1 = 500 \\leq 900$\n",
+    "    * $-\\infty \\leq C_2 = 250 \\leq 300$\n",
+    "    * $500 \\leq C_3 = 600 \\leq 2000$\n",
     "\n",
-    "Ejercicio sacado de: [https://www.uv.es/~sala/ascplex.pdf](https://www.uv.es/~sala/ascplex.pdf)"
+    "Ejercicio sacado de: [https://mypage.cuhk.edu.cn/academics/junfengwu/materials/MAT3007/Tutorials/tutorial7.pdf](https://mypage.cuhk.edu.cn/academics/junfengwu/materials/MAT3007/Tutorials/tutorial7.pdf)"
    ]
   },
   {
@@ -150,30 +156,22 @@
     "EQUATION NAME                            LOWER           CURRENT             UPPER\n",
     "-------------                            -----           -------             -----\n",
     "OBJ                                       -INF                NA              +INF   =C\n",
-    "B1                                         160               200               240   =C\n",
-    "B2                                         120               144              +INF   =C\n",
-    "B3                                     66.6667                80                96   =C\n",
+    "B1                                          87               240              +INF   =C\n",
+    "B2                                          90               150           368.571   =C\n",
+    "B3                                          50               180               300   =C\n",
     "\n",
     "--- Objective ranging...\n",
     "\n",
     "VARIABLE NAME                            LOWER           CURRENT             UPPER\n",
     "-------------                            -----           -------             -----\n",
     "F                                         -INF                NA              +INF   =C\n",
-    "C                                      18666.7             20000             28000   =C\n",
-    "D                                        10000             14000             15000   =C\n",
-    "L                                         -INF              8000             10000   =C\n",
-    "M                                         -INF              4000              6000   =C\n",
+    "X1                                         150               500               900   =C\n",
+    "X2                                        -INF               250               300   =C\n",
+    "X3                                         500               600              2000   =C\n",
     "```\n",
     "\n",
     "Aquí los valores coinciden completamente, pero es debido a que fue hecho con el mismo código, así que queda pendiente realizar otro ejercicio diferente no hecho en con GAMS para confirmar resultados"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
