chore: modify text in some markdown cells

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -10,8 +10,8 @@
     "$$F.O.: \\sum_{i}^{i=n}\\sum_{j}^{j=m} c_{i,j}x_{i,j}$$\n",
     "\n",
     "Y las restricciones son las siguientes:\n",
-    "- $\\sum_{j=1}^{j=m}x_{i,j} = 1$ para cada $j$. La suma de cada fila debe ser igual a 1\n",
-    "- $\\sum_{i=1}^{i=n}x_{i,j} = 1$ para cada $i$. La suma de cada columna debe ser igual a 1\n",
+    "- $\\sum_{j=1}^{j=m}x_{i,j} = 1$ para cada $i$. La suma de cada fila debe ser igual a 1\n",
+    "- $\\sum_{i=1}^{i=n}x_{i,j} = 1$ para cada $j$. La suma de cada columna debe ser igual a 1\n",
     "- $\\sum_{i=1}^{i=n} \\sum_{j=1}^{j=m} x_{i,j} \\geq 0$. Todas las variables deben ser positivas"
    ]
   },
@@ -41,7 +41,7 @@
    "source": [
     "Enunciado:\n",
     "\n",
-    "> La Junta Administradora Local (JAL) de la comuna X tiene tres proyectos de pavimentación de vías. La junta tiene el problema de determinar que contratista llevara a cabo los proyectos. Se abrió licitación para los proyectos, entre contratistas locales, tres presentaron diligenciados sus pliegos. El costo de cada proyecto según la propuesta de cada contratista se presenta en la siguiente tabla (en millones de u.m.).\n",
+    "La Junta Administradora Local (JAL) de la comuna X tiene tres proyectos de pavimentación de vías. La junta tiene el problema de determinar que contratista llevara a cabo los proyectos. Se abrió licitación para los proyectos, entre contratistas locales, tres presentaron diligenciados sus pliegos. El costo de cada proyecto según la propuesta de cada contratista se presenta en la siguiente tabla (en millones de u.m.).\n",
     "\n",
     "|               | Proyecto 1 | Proyecto 2 | Proyecto 3 |\n",
     "| ------------- | ---------- | ---------- | ---------- |\n",
@@ -807,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
