chore: update the last part of the new sensitivity excercise

--- a/sensitivity.ipynb
+++ b/sensitivity.ipynb
@@ -169,8 +169,7 @@
     "X2                                        -INF               250               300   =C\n",
     "X3                                         500               600              2000   =C\n",
     "```\n",
-    "\n",
-    "Aquí los valores coinciden completamente, pero es debido a que fue hecho con el mismo código, así que queda pendiente realizar otro ejercicio diferente no hecho en con GAMS para confirmar resultados"
+    "Después de haber realizado el ejercicio de manera manual, y comparar con el simulador, se aprecia que todos los valores coinciden. Manualmente y con simulador se obtienen los mismos resultados."
    ]
   }
  ],
